// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskCheckbox renders correctly when task is COMPLETED 1`] = `
<a
  href="/buddy/newbies/undefined/tasks/1"
  onClick={[Function]}
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemIcon-root"
    >
      <Checkbox
        checked={true}
        color="primary"
        disableRipple={true}
        onChange={[Function]}
        onClick={[Function]}
      />
    </div>
    <div
      className="MuiListItemText-root"
    >
      <Typography
        className="MuiListItemText-primary"
        component="span"
        variant="body1"
      >
        <del>
          Change you line manager
        </del>
      </Typography>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
</a>
`;

exports[`Component - TaskCheckbox renders correctly when task is UNCOMPLETED 1`] = `
<a
  href="/buddy/newbies/undefined/tasks/1"
  onClick={[Function]}
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemIcon-root"
    >
      <Checkbox
        checked={false}
        color="primary"
        disableRipple={true}
        onChange={[Function]}
        onClick={[Function]}
      />
    </div>
    <div
      className="MuiListItemText-root"
    >
      <Typography
        className="MuiListItemText-primary"
        component="span"
        variant="body1"
      >
        <strong>
          Change you line manager
        </strong>
      </Typography>
    </div>
  </div>
</a>
`;
